# AppNotEx

./: .SRCINFO  .gitignore  .gitmodules  CMakeLists.txt  DEVNOTES.md  Makefile  PKGBUILD  README.md  appnotex.cpp  notex.cpp
.github/: auto-assign.yaml  issue-label-bot.yaml  release-drafter.yaml
.github/workflows/: cmake-ci-linux.yml  cmake-ci.yml  cmake-linux.yml  cmake.yml  mangen.yml  run-test.yml  runTest.yml
docs/: README.md  appnotex.1  appnotexManpage.md
example/: config.json
include/AppNotEx/: errorcodes.hpp  version.hpp
include/AppNotEx/database/: database.hpp
include/AppNotEx/export/: export.hpp
include/AppNotEx/notex/: notex.hpp
src/database/: database.cpp
src/export/: export.cpp
test/: appnotexTest.cpp
